objects/Account.object
<CustomObject>
	<fields>
		<fullName>Competitor_Solution__c</fullName>
		<label>Competitor Solution</label>
		<picklist>
			<picklistValues>
				<fullName>7d.net</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Aavting</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Accrue</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Amazon</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Atlas Solutions</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Audienta</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Bespoke in-house</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Beyond</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>BIG von Avato</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>BizMark (Orange)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Blue Martini</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>BlueMetrics</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>ClickTracks</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Cognos</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Comscore</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Conversion Analyst</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Coremetrics</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Custom Build</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>DeepMetrix</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>digiMine</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>DigitalForest</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>doubclick</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>DoubleClick</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Dynamic Logic</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Dynasight</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>E.piphany</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Eloqua</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>eStat Mediametrie</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>eTracker</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>eXTReMe Tracking</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Competitor__c</fullName>
		<defaultValue>false</defaultValue>
		<description>02/28/2011 AE</description>
		<label>Competitor</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Compliance_Expiration_Date__c</fullName>
		<description>This field is used to determine when the Compliance will get expired</description>
		<label>Compliance Expiration Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Connect_Access__c</fullName>
		<label>Connect Access</label>
		<picklist>
			<picklistValues>
				<fullName>Requested</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Granted</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Denied</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Connect_GreenZone__c</fullName>
		<label>Connect</label>
		<picklist>
			<picklistValues>
				<fullName>Red - 1</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red - 2</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red - 3</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 4</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 5</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 6</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 7</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 8</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 9</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green  - 10</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Connect_Partner_Classification__c</fullName>
		<label>Connect Partner Classification</label>
		<picklist>
			<picklistValues>
				<fullName>CSP</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>VAR</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Reseller</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Distributor</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Contact_Events_and_Promotional_Offers__c</fullName>
		<label>Contact - Events and Promotional Offers</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contact_Marketing_Information__c</fullName>
		<label>Contact - Marketing Information</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contact_Other_General_Information__c</fullName>
		<label>Contact - Other General Information</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contact_Profile_Rating_Result__c</fullName>
		<formula>IF(Contact_Profile_Rating__c = 'a', IMAGE("/resource/green","green")&amp;" Contact has excellent profile fit", 
IF( Contact_Profile_Rating__c = 'b', IMAGE("/resource/yellow","yellow")&amp;" Contact has average profile fit", 
IF( Contact_Profile_Rating__c = 'c', IMAGE("/resource/yellow","yellow")&amp;" Contact has average profile fit", 
IF( Contact_Profile_Rating__c = 'd', IMAGE("/resource/red","red")&amp;" Contact has poor profile fit", 
''))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Contact Profile Rating Result</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Contact_Profile_Rating__c</fullName>
		<label>Contact Profile Rating</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Contact_Readiness_Rating_Result__c</fullName>
		<formula>IF( Contact_Readiness_Rating__c = '1', IMAGE("/resource/green","green")&amp;" The 'right' contact has shown a high level of interest/understanding for sales team's discussion", 
IF( Contact_Readiness_Rating__c = '2', IMAGE("/resource/yellow","yellow")&amp;" The 'right' contact has shown an average level of interest/understanding for sales team's discussion", 
IF(Contact_Readiness_Rating__c = '3', IMAGE("/resource/yellow","yellow")&amp;" Organisation has average profile fit", 
IF( Contact_Readiness_Rating__c = '4', IMAGE("/resource/red","red")&amp;" The 'right' contact has shown a low level of interest/understanding for sales team's discussion", 
''))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Contact Readiness Rating Result</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Contact_Readiness_Rating__c</fullName>
		<label>Contact Readiness Rating</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Contact_Sales_Information__c</fullName>
		<label>Contact - Sales Information</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contact_Security_Information__c</fullName>
		<label>Contact - Security Information</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contact_Technical_Information__c</fullName>
		<label>Contact - Technical Information</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Contract_Agreement_Type__c</fullName>
		<label>Contract / Agreement Type</label>
		<picklist>
			<picklistValues>
				<fullName>N/A</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Contract_Date_Start__c</fullName>
		<formula>Latest_Registration__r.Date_Start__c</formula>
		<label>Contract Start Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Contract_Reference_ID__c</fullName>
		<label>Contract Reference ID</label>
		<length>25</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Converted_From_Marketing__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Converted From Marketing</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Converted_Source__c</fullName>
		<label>Converted Source</label>
		<picklist>
			<picklistValues>
				<fullName>Marketing to Enterprise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Marketing to SMB</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>SMB to Enterprise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Enterprise to SMB</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Core_Services_GreenZone__c</fullName>
		<label>Core Services</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 10</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 7</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 8</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Green - 9</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red - 1</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red - 2</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red - 3</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 4</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 5</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow - 6</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Courseware_materials__c</fullName>
		<label>Courseware materials</label>
		<picklist>
			<picklistValues>
				<fullName>Adobe authored curriculum</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Adobe Classroom-in-a-Book</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Axzo Press</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Element K-authored courseware</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In-house development</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Purchased third-party curriculum</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Total Training videos</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Other</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Create_Acc_from_Lookup__c</fullName>
		<formula>HYPERLINK("https://cs3.salesforce.com/001/e?retURL=%2F001%2Fo", "Create New Account")</formula>
		<label>Create Acc from Lookup</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CreatedBy_First_Name__c</fullName>
		<formula>CreatedBy.FirstName</formula>
		<label>CreatedBy First Name</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CreatedBy_Last_Name__c</fullName>
		<formula>CreatedBy.LastName</formula>
		<label>CreatedBy Last Name</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Creative_Cloud_Customer_Tier__c</fullName>
		<description>Creative Cloud CSAM Customer tier based on total number of Creative Cloud Seats</description>
		<inlineHelpText>Creative Cloud CSAM Customer Tier based on total number of Creative Cloud Seats</inlineHelpText>
		<label>CC CSAM Customer Tier</label>
		<picklist>
			<picklistValues>
				<fullName>Tier 1</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 2</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 3</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 4</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 5</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Creative_Cloud_GreenZone__c</fullName>
		<label>CCE</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Credit_Check__c</fullName>
		<label>Credit Check</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Current_Situation_History__c</fullName>
		<label>Current Situation History</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Current_Situation__c</fullName>
		<label>Current Situation</label>
		<length>5000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Customer_Activity_Hub__c</fullName>
		<formula>HYPERLINK(SUBSTITUTE(LEFT($Api.Enterprise_Server_URL_380, FIND( '/services', $Api.Enterprise_Server_URL_380)),"jbcxm","c")+"apex/CustomerActivityHub?accountId="+Id+"&amp;callingObject=Account&amp;retId="+Id,"Customer Activity Hub","_blank")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Customer Activity Hub</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Customer_Entitlements__c</fullName>
		<formula>HYPERLINK(SUBSTITUTE(LEFT($Api.Enterprise_Server_URL_380, FIND( '/services', $Api.Enterprise_Server_URL_380)),"jbcxm","c")+"apex/EntitlementManager?accountId="+Id,"Entitlements","_blank")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Purchase History</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Customer_Risk_Count__c</fullName>
		<label>Customer Risk Count</label>
		<summaryForeignKey>Customer_Risk__c.Account__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Customer_Segment_Not_Offered__c</fullName>
		<label>Not Offered</label>
		<picklist>
			<picklistValues>
				<fullName>2-9 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>10-99 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>100-499 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>500-999 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>1,000-20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>+20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Consumer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Higher Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: K - 12</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Students</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Central Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: State/Provisional/Regional</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Local Government</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Customer_Segment_Not_Significant__c</fullName>
		<label>Not Significant</label>
		<picklist>
			<picklistValues>
				<fullName>2-9 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>10-99 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>100-499 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>500-999 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>1,000-20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>+20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Consumer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Higher Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: K - 12</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Students</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Central Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: State/Provisional/Regional</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Local Government</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Customer_Segment_Primary_Focus__c</fullName>
		<label>Primary Focus</label>
		<picklist>
			<picklistValues>
				<fullName>2-9 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>10-99 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>100-499 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>500-999 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>1,000-20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>+20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Consumer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Higher Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: K - 12</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Students</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Central Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: State/Provisional/Regional</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Local Government</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Customer_Segment_Secondary_Focus__c</fullName>
		<label>Secondary Focus</label>
		<picklist>
			<picklistValues>
				<fullName>2-9 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>10-99 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>100-499 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>500-999 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>1,000-20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>+20,000 Employees</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Consumer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Higher Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: K - 12</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education: Students</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Central Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: State/Provisional/Regional</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government: Local Government</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Customer_Status__c</fullName>
		<label>Customer Status</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>DI_PV__c</fullName>
		<formula>IF(AND(ISPICKVAL(Partner_Program_Type__c,"Retail Partner"),INCLUDES(Specialisation__c,"Digital Imaging/ProVideo")),"Y","N")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DI/PV</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>DMA_Green_Zone__c</fullName>
		<label>DMA Green Zone</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DME_Green_Zone__c</fullName>
		<label>DME Green Zone</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DMa_Named_Account__c</fullName>
		<description>Digital Marketing Named Account</description>
		<inlineHelpText>Digital Marketing Named Account</inlineHelpText>
		<label>Dx Named Account</label>
		<picklist>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DMe_Account_Group__c</fullName>
		<description>This field to identify which account group (ENT etc) within Digital Media.</description>
		<inlineHelpText>Digital Media Account Group</inlineHelpText>
		<label>DMe Account Group</label>
		<picklist>
			<picklistValues>
				<fullName>Named Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Territory Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>ABD Named</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>VIPe</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>SMB</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DMe_Comp_Attrition_Eligible__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Determines whether or not Attrition should be considered for Comp purposes for the Account. If this flag is checked, then the "Attrition Reportable" field will be set based on the Attrition or Attrition Override field. If the flag is not checked then Attrition does not need to be considered for this account during Comp calculation</description>
		<inlineHelpText>Should Attrition be calculated for this Account?</inlineHelpText>
		<label>DMe Comp Attrition Eligible</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>DMe_Named_Account__c</fullName>
		<description>Digital Media Named Account</description>
		<inlineHelpText>Digital Media Named Account</inlineHelpText>
		<label>DMe Named Flag</label>
		<picklist>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DPS_DRA_Contract_Status__c</fullName>
		<description>Status of the DPS Deal Registration Agreement (DRA).</description>
		<label>DPS DRA Contract Status</label>
		<picklist>
			<picklistValues>
				<fullName>Pending Adobe Legal Approval</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Submitted to Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Adobe</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Received Signed from Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Adobe Signature</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Executed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Terminated</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Expired</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DPS_DRA_Contract__c</fullName>
		<description>Deal Registration Agreement (DRA) contract number for the DPS partner.</description>
		<label>DPS DRA Contract #</label>
		<length>25</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>DPS_DRA_End_Date__c</fullName>
		<description>Date that the DPS Deal Registration Agreement (DRA) is no longer valid.</description>
		<label>DPS DRA End Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DPS_DRA_Executed_Date__c</fullName>
		<description>Date that the DPS Deal Registration Agreement (DRA) is executed</description>
		<label>DPS DRA Executed Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DPS_SRA_Contract_Status__c</fullName>
		<description>Status of the DPS SRA contract</description>
		<label>DPS SRA Contract Status</label>
		<picklist>
			<picklistValues>
				<fullName>Pending Adobe Legal Approval</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Submitted to Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Adobe</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Received Signed from Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Adobe Signature</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Executed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Terminated</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Expired</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DPS_SRA_Contract__c</fullName>
		<description>Contract number of the DPS SRA agreement</description>
		<label>DPS SRA Contract #</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>DPS_SRA_End_Date__c</fullName>
		<description>Date that the SRA Contract became no longer valid.</description>
		<label>DPS SRA End Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DPS_SRA_Executed_Date__c</fullName>
		<description>Date that the DPS SRA contract went into affect.</description>
		<label>DPS SRA Executed Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DR_Contract_Status__c</fullName>
		<label>DR Contract Status</label>
		<picklist>
			<picklistValues>
				<fullName>Pending Adobe Legal Approval</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Submitted to Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Adobe</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Received Signed from Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Adobe Signature</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Executed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Terminated</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Expired</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>DR_Contract__c</fullName>
		<description>Deal Registration Contract #</description>
		<label>DR Contract #</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>DR_End_Date__c</fullName>
		<description>DR End Date - Requested by Anjali Chawla via Enhancement Case # 00038330</description>
		<label>DR End Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DR_Executed_Date__c</fullName>
		<label>DR Executed Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Advertising__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Advertising__c</formula>
		<label>DSLA In Family-Media Optimizer</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_AudienceManager__c</fullName>
		<formula>now()- Date_DSLA_In_Family_AudienceManager__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DSLA In Family-Audience Manager</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Campaign__c</fullName>
		<description>Neo M&amp;A JY - This is based on the Date DSLA in Family-Campaign field. User Story 002147</description>
		<formula>now()- Date_DSLA_In_Family_Campaign__c</formula>
		<label>DSLA In Family-Campaign</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Creative__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Creative__c</formula>
		<label>DSLA In Family - Acrobat</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_DMS__c</fullName>
		<formula>now()- Date_DSLA_In_Family_DMS__c</formula>
		<label>DSLA In Family-Analytics</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_DPS__c</fullName>
		<formula>now()- Date_DSLA_In_Family_DPS__c</formula>
		<label>DSLA In Family-DPS</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Digital_Media__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Digital_Media__c</formula>
		<label>DSLA In Family - Creative</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_EchoSign__c</fullName>
		<formula>now()- Date_DSLA_In_Family_EchoSign__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DSLA In Family-EchoSign</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_PPBU__c</fullName>
		<formula>now()- Date_DSLA_In_Family_PPBU__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DSLA In Family-PPBU</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Primetime__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Primetime__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DSLA In Family-Primetime</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Social__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Social__c</formula>
		<label>DSLA In Family-Social</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Stock__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Stock__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>DSLA In Family-Stock</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_Target__c</fullName>
		<formula>now()- Date_DSLA_In_Family_Target__c</formula>
		<label>DSLA In Family-Target</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_In_Family_WEM__c</fullName>
		<formula>now()- Date_DSLA_In_Family_WEM__c</formula>
		<label>DSLA In Family-Experience Manager</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_Top_Parent_Advertising__c</fullName>
		<formula>Top_Parent__r.Days_Since_Last_Activity_Advertising__c</formula>
		<label>DSLA-Top Parent-Media Optimizer</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DSLA_Top_Parent_Digital_Media__c</fullName>
		<formula>if( Top_Parent__c!=null, Top_Parent__r.Days_Since_Last_Activity_Digital_Media__c ,null)</formula>
		<label>DSLA-Top Parent-Creative</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>DUNS__c</fullName>
		<label>DUNS #</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>D_B_Annual_Revenue__c</fullName>
		<description>04/14/2011 AR</description>
		<label>D&amp;B Annual Revenue</label>
		<length>15</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>D_B_Industry_Name__c</fullName>
		<label>D&amp;B Industry Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>D_B_Industry__c</fullName>
		<description>03/17/2011 AE</description>
		<label>D&amp;B Industry</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>D_B_Number_of_Employees__c</fullName>
		<description>03/30/2011 AE - new field for D&amp;B because D&amp;B Number of Employees is a varchar 7</description>
		<label>D&amp;B Number of Employees</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_AEPlatform__c</fullName>
		<label>Date DSLA In Family-AEPlatform</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Advertising__c</fullName>
		<label>Date DSLA In Family-Media Optimizer</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_AudienceManager__c</fullName>
		<label>Date DSLA In Family-Audience Manager</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Campaign__c</fullName>
		<description>Neo M&amp;A JY - added this field to capture the date since last activity assigned to the ADM owner of Campaign family (across all related accounts, both child and top parent, and their associated contacts)</description>
		<label>Date DSLA In Family-Campaign</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Creative__c</fullName>
		<label>Date DSLA In Family - Acrobat</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_DMS__c</fullName>
		<label>Date DSLA In Family-Analytics</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_DPS__c</fullName>
		<label>Date DSLA In Family-DPS</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Digital_Media__c</fullName>
		<label>Date DSLA In Family - Creative</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_EchoSign__c</fullName>
		<description>Capture date since last activity assigned to the ADM owner of the EchoSign family</description>
		<label>Date DSLA In Family-EchoSign</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Magento__c</fullName>
		<description>Capture date since last activity assigned to the ADM owner of the Magento family</description>
		<label>Date DSLA In Family-Magento</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Marketo__c</fullName>
		<label>Date DSLA In Family-Marketo</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_PPBU__c</fullName>
		<label>Date DSLA In Family-PPBU</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Primetime__c</fullName>
		<label>Date DSLA In Family-Primetime</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Social__c</fullName>
		<label>Date DSLA In Family-Social</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Stock__c</fullName>
		<label>Date DSLA In Family-Stock</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_Target__c</fullName>
		<label>Date DSLA In Family-Target</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_DSLA_In_Family_WEM__c</fullName>
		<label>Date DSLA In Family-Experience Manager</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Date_Founded__c</fullName>
		<inlineHelpText>Please enter only Year in xxxx format</inlineHelpText>
		<label>Date Founded</label>
		<length>4</length>
		<type>Text</type>
	</fields>
</CustomObject>